# Armirror

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.github/workflows/: blank.yml
messages/: en.json  hi.json
mirfish/: pyproject.toml
mirfish/mirfish/brands/: __init__.py  base.py  example_brand.py
mirfish/mirfish/classifiers/: __init__.py  base.py  page_classifier.py
mirfish/mirfish/extractors/: __init__.py  base.py  markdown_extractor.py  product_extractor.py  schema_extractor.py
mirfish/mirfish/fetchers/: __init__.py  base.py  http.py
mirfish/mirfish/llm/: __init__.py  base.py  openai_extractor.py
mirfish/mirfish/normalizers/: __init__.py  base.py  product_normalizer.py
mirfish/mirfish/renderers/: __init__.py  base.py  playwright_renderer.py
mirfish/mirfish/schemas/: __init__.py  core.py
mirfish/mirfish/storage/: __init__.py  file_storage.py  jsonl_storage.py  parquet_storage.py  sqlite_storage.py
mirfish/mirfish/utils/: html_utils.py  url_utils.py
mirfish/mirfish/workflows/: __init__.py  base.py  crawl_orchestrator.py  generic_fashion.py
momobot/: README.md  pyproject.toml
momobot/momobot/: __init__.py  agent.py  cli.py  config.py
momobot/momobot/cognition/: __init__.py  decision.py  mesh.py
momobot/momobot/cognition/memory/: __init__.py  base.py  failure.py  skill.py  workflow.py
momobot/momobot/execution/: __init__.py  executor.py  keyboard.py  mouse.py
momobot/momobot/learning/: __init__.py  learner.py
momobot/momobot/observation/: __init__.py  audio.py  camera.py  screen.py  system.py  window.py
momobot/momobot/schemas/: __init__.py  action.py  memory.py  observation.py
momobot/momobot/verification/: __init__.py  verifier.py
momobot/tests/: __init__.py  test_learning.py  test_memory.py  test_mesh.py  test_schemas.py  test_verifier.py
prisma/: schema.prisma
src/: i18n.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/admin/: page.tsx
src/app/ar/: page.tsx
src/app/dashboard/: page.tsx
src/app/features/: page.tsx
src/app/onboarding/: page.tsx
src/app/prices/: page.tsx
src/app/pricing/: page.tsx
src/app/privacy/: page.tsx
src/app/profiles/: page.tsx
src/app/saved/: page.tsx
src/app/settings/: page.tsx
src/app/shop/: page.tsx
src/app/stylist/: page.tsx
src/app/terms/: page.tsx
src/app/video-preview/: page.tsx
src/components/: providers.tsx
src/components/layout/: dashboard-layout.tsx  sidebar.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  (+5 more)
src/db/: client.ts  schema.ts
src/hooks/: use-ar.ts  use-body-model.ts  use-profile.ts
src/lib/: auth.ts  utils.test.ts  utils.ts
src/types/: body-model.ts  product.ts  profile.ts
(+26 files in other folders)
