[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirfish"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "playwright>=1.44",
    "trafilatura>=1.12",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "typer[all]>=0.12",
    "rich>=13.7",
    "selectolax>=0.3",
    "aiofiles>=23.2",
    "pyarrow>=16.0",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "lxml>=5.2",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-playwright>=0.5",
]

[project.scripts]
mirfish = "mirfish.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["mirfish"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
